# QuEST

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build-cuMPI-QuEST-and-scatter.sh  build-cuMPI-QuEST.sh  compile-and-run.sh  env.sh  hosts.txt  hpcx-env.sh  localMPI.  machinefile  scatter.sh  twoMPI.0.nvprof  twoMPI.1.nvprof
GHZ_QFT/: build_and_run.sh  local_build_and_run.sh
QuEST/: CMakeLists.txt
QuEST/include/: QuEST.h  QuEST_precision.h  huge_page_alloc.h
QuEST/src/: QuEST.c  QuEST_common.c
QuEST/src/CPU/: CMakeLists.txt  QuEST_cpu.c  QuEST_cpu_distributed.c  QuEST_cpu_internal.h  QuEST_cpu_local.c  huge_page_alloc.c
QuEST/src/GPU/: CMakeLists.txt  QuEST_double_gpu.cu  QuEST_gpu.cu  QuEST_gpu.h  QuEST_gpu_internal.h  QuEST_gpu_local.cu  densmatr.cu
QuEST/src/GPU/cuMPI-benchmark/: CMakeLists.txt  main.cu
QuEST/src/GPU/cuMPI-demo/: CMakeLists.txt  main.cu
examples/: compactUnitaryLocal.c  main_shor.cpp  random.c  random_26.cpp  random_debug.c  random_raw.c  utils.cpp  wl1.c  wl1.cpp  wl2.cpp  wl3.cpp  wl4.cpp  wl5.cpp  workload.cpp
random/: build_and_run.sh  check.sh  local_build_and_run.sh
random/build_gnu/: demo  qft
